[metadata]
name = sam_header_parser
author = Irina Colgiu
author-email = ic4@sanger.ac.uk
summary = Package to parse the header of a SAM/BAM/CRAM file.
license = GPL
description-file = README.md
requires-python = 3.5
classifier =
Development Status :: 1 - Alpha
Environment :: Console
Intended Audience :: Developers
Operating System :: OS Independent
Programming Language :: Python
[files]
packages =
	sam